--- a/watchlist.html
+++ b/watchlist.html
@@ -12,7 +12,8 @@
 	 crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="data.js"></script>
-	<script src="index.js"></script>
+	<!-- <script src="index.js"></script> -->
+	<script src="watchlist.js"></script>
 	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
@@ -20,34 +21,16 @@
 		<div class="row">
 			<div class="col-12 header text-center">
 				<h2 class="display-2">Scene It</h2>
-				<p>Search for movies you want to watch.</p>
-				<p>Save them to your list</p>
+			
+			</div>
+        </div>
+        <div class="row">
+			<div class="col-12 movies-container">
+			
+			
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-12 search">
-				<form id="search-form">
-					<div class="input-group input-group-lg">
-						<input class="form-control search-bar" placeholder="Search for a movie...">	
-						<button class="btn btn-primary input-group-btn" type="submit">Search</button>
-				    </div>
-				</form>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-4">
-				<a href="/watchlist.html">Go to my watchlist</a>
-			</div>
-		</div>
-		<div class="row">
-			<div id="container" class="results movies-container">
-
-				<!-- MOVIES SHOW UP HERE! -->
-					<!-- <div id="container" class="movies-container card-deck">
-						
-					</div> -->
-			</div>	
-		</div>
+		
 
 	</div>
 
