--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Scene It</title>
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -20,32 +21,28 @@
 		<div class="row">
 			<div class="col-12 header text-center">
 				<h2 class="display-2">Scene It</h2>
-				<p>Search for movies you want to watch.</p>
-				<p>Save them to your list</p>
+				<p><span class="emphasize">Search</span> for movies you want to watch. <span class="emphasize">Save</span> them to your list</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 search">
 				<form id="search-form">
 					<div class="input-group input-group-lg">
-						<input class="form-control search-bar" placeholder="Search for a movie...">	
+						<input id="searchInput" class="form-control search-bar" placeholder="Search for a movie...">	
 						<button class="btn btn-primary input-group-btn" type="submit">Search</button>
 				    </div>
 				</form>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-4">
-				<a href="/watchlist.html">Go to my watchlist</a>
+		<div class="row justify-content-center">
+			<div class="watchlist-link">
+				<a class="btn btn-primary" role="button" href="/watchlist.html">Go to my Watch List</a>
 			</div>
-		</div>
 		<div class="row">
 			<div id="container" class="results movies-container">
 
 				<!-- MOVIES SHOW UP HERE! -->
-					<!-- <div id="container" class="movies-container card-deck">
-						
-					</div> -->
+				
 			</div>	
 		</div>
 
