--- a/watchlist.html
+++ b/watchlist.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Scene It</title>
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -20,12 +21,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 header text-center">
-				<h2 class="display-2">Scene It</h2>
+				<h2 class="display-2">My Watch List</h2>
 			
 			</div>
         </div>
         <div class="row">
-			<div class="col-12 movies-container">
+			<div class="col-12 watchlistContainer movies-container">
 			
 			
 			</div>
